<resources>
    <string name="app_name">Wire Chat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="chat_button">Send</string>
    <string name="test_string">Lorem ipsum yougo sol tat mifogih.</string>
    <string name="message_input">Send message</string>
</resources>
