<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hariharan.theroboticlabs.com.wirechat.RegisterActivity">

    <TextView
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/name_edittext"
        android:layout_marginTop="20dp"
        android:text="@string/register_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_name"
        android:layout_below="@+id/name_edittext"
        android:layout_marginTop="18dp"
        android:text="@string/register_email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_edittext"
        android:inputType="textEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_edittext"
        android:layout_below="@+id/register_email" />

    <TextView
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_email"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="24dp"
        android:text="@string/register_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email_edittext"
        android:layout_below="@+id/register_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_edittext"
        android:layout_below="@+id/password_edittext"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/register"
        android:textSize="16sp" />
</RelativeLayout>
